--- a/chat/package.json
+++ b/chat/package.json
@@ -6,14 +6,19 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0",
+    "bootstrap-icons": "^1.9.1",
     "firebase": "^9.9.1",
+    "firebase-admin": "^11.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.4.0",
+    "react-select-search": "^3.0.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
